# JobsAppTrafficMonitor

./: .gitignore  README.md  pyproject.toml
scripts/_shared/: macos_environment.zsh
scripts/【MacOS】▶️运行项目.command/: README.md  【MacOS】▶️运行项目.command
scripts/【MacOS】📦生成DMG.command/: README.md  【MacOS】📦生成DMG.command
scripts/【Windows】📦生成EXE.bat/: README.md  【Windows】📦生成EXE.bat
src/jobs_app_traffic_monitor/: __init__.py  __main__.py  app_resolver.py  main.py  models.py
src/jobs_app_traffic_monitor/collectors/: __init__.py  base.py  factory.py  macos_nettop.py  windows_etw.py
src/jobs_app_traffic_monitor/ui/: main_window.py
tests/: test_app_resolver.py  test_macos_nettop.py  test_main_window.py
